feat(html): add GWT launcher and fix Java 17 features for GWT compatibility